k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: amazona
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
  clusterIP: None
